# KonamikU

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts  version.properties
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/cf0x/konamiku/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/cf0x/konamiku/: KonamikuApp.kt  MainActivity.kt
app/src/main/java/org/cf0x/konamiku/data/: AppDataStore.kt  CardData.kt
app/src/main/java/org/cf0x/konamiku/navigation/: Navigation.kt
app/src/main/java/org/cf0x/konamiku/nfc/: DummyPaymentService.kt  EmuCard.kt  FelicaCard.kt
app/src/main/java/org/cf0x/konamiku/notification/: LiveUpdateManager.kt  NotificationActionReceiver.kt  ScanReceiver.kt
app/src/main/java/org/cf0x/konamiku/system/: StatusDetector.kt
app/src/main/java/org/cf0x/konamiku/util/: AimeAccessCodeConverter.kt  CardIdConverter.kt  NfcRestart.kt  VibratorUtil.kt
app/src/main/java/org/cf0x/konamiku/xposed/: KonamikuModule.kt  NfcHookReceiver.kt  (+1 more)
app/src/main/jni/: CMakeLists.txt  bridge.c
app/src/main/jni/pmm-rust/: Cargo.toml
app/src/main/jni/pmm-rust/src/: lib.rs
app/src/main/res/drawable/: ic_nfc.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: apdu_service.xml  device_admin.xml  hce_f_service.xml  nfc_tech_filter.xml
app/src/test/java/org/cf0x/konamiku/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
